# harboraicore

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  email_template_snippet.html  nginx.conf
admin-dashboard/: .env.example  package-lock.json  package.json  tailwind.config.js
auto-annotator/: Dockerfile  README.md  pyproject.toml  requirements.txt
auto-annotator/src/: __init__.py  config.py  main.py  schemas.py
auto-annotator/src/annotators/: __init__.py  action_recognizer.py  base.py  hand_pose.py  livecc_captioner.py  object_detector.py  sam3_segmenter.py  scene_segmenter.py  speech_annotator.py  transcript_annotator.py
auto-annotator/src/api/: __init__.py
auto-annotator/src/models/: __init__.py  clip.py  quality.py  sam.py  whisper.py  yolo.py
auto-annotator/src/pipeline/: __init__.py  orchestrator.py
backend/: .env.example  .env.production.template  .eslintrc.js  .gitignore  Dockerfile  docker-compose.livekit.yml  livekit.yaml  package-lock.json  package.json  tsconfig.json
blog/: Dockerfile  index.html  post.html
client-portal/: Dockerfile  dataset.html  index.html  media.html
cognee-service/: .env.example  Dockerfile  README.md  pyproject.toml
cognee-service/src/: __init__.py  config.py  main.py  models.py  service.py
dashboard/: Dockerfile  index.html
docs/: APP_FLOW.md  DESIGN_AUDIT.md  DESIGN_SYSTEM.md  PRD.md  SEO_TRACKER.md  backend_contracts.md
frontend/: .env.example  .env.production.template  .gitignore  App.tsx  Dockerfile  README.md  about.html  ads.html  contact.html  deployment_steps.md  index.css  index.html  infrastructure.html  metadata.json  netlify.toml  nginx.conf  package-lock.json  package.json  pricing.html  process_logo.py  tailwind.config.js  types.ts  walkthrough.md
frontend_backup/: contributors.html  datasets.html  engineering.html  hardware.html  index.html  product.html
mobile-app/: app.html  harbor.html
scripts/: GSC_MONITOR_SETUP.md  aggressive_indexer.py  blitz_results.json  convert_to_webp.sh  gsc_monitor.py  pseo_seed.sql  pseo_seeder.py  rename_images.py  requirements.txt  run_gsc_check.sh  run_seo_blitz.sh  social_poster.py  start_exclusive_dev.sh  (+1 more)
tasks/: todo.md  (+1 more)
(+432 files in other folders)
